# chatwithsqldata

./: .coverage  .env  .gitignore  pyproject.toml
pythonpoetry/: main.py
pythonpoetry/com/github/dheerajhegde/api/: build_pipeline.py
tests/: test_main.py
